fixed slider items on mobile view

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -134,6 +134,6 @@ flex-direction:column;
   }
  }
 
- body.cart .cart-icon-bubble{
+ body.cart #cart-icon-bubble{
   display: none;
  }
